--- a/opengl_tutorials/hello_opengl/hello_opengl.vcxproj.filters
+++ b/opengl_tutorials/hello_opengl/hello_opengl.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="hello_opengl.cpp">
+    <ClCompile Include="Tutorial00_Test.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
