--- a/opengl_tutorials/hello_opengl/hello_opengl.vcxproj
+++ b/opengl_tutorials/hello_opengl/hello_opengl.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{36805BC6-DB12-4007-8A3F-A20EFBD38564}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>hello_opengl</RootNamespace>
+    <ProjectName>Tutorial00_Test</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -78,7 +79,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="hello_opengl.cpp" />
+    <ClCompile Include="Tutorial00_Test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
